--- a/code/index.html
+++ b/code/index.html
@@ -108,7 +108,8 @@
           <li class="services-item">
             <h3 class="services-name">Жильё</h3>
             <p class="services-info">
-                Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+              Рекомендуем пожить в настоящем мотеле, всё как в кино!
+            </p>
           </li>
           <li class="services-item">
             <h3 class="services-name">Еда</h3>
@@ -118,50 +119,69 @@
           </li>
           <li class="services-item">
             <h3 class="services-name">Сувениры</h3>
-            <pclass="services-info">
-                Не только китайского, но и настоящего местного производства!</p>
+            <p class="services-info">
+              Не только китайского, но и настоящего местного производства!
+            </p>
           </li>
         </ul>
       </section>
       <div class="hotel-search">
         <h2 class="hotel-search-title">Заинтересовались?</h2>
-        <p class="hotel-search-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <button class="hotel-search-btn" type="button">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</button>
+        <p class="hotel-search-description">
+          Укажите предполагаемые даты поездки, и мы покажем вам лучшие
+          предложения гостиниц в Седоне
+        </p>
+        <button class="hotel-search-btn" type="button">
+          ПОИСК ГОСТИНИЦЫ В СЕДОНЕ
+        </button>
       </div>
     </main>
     <footer class="main-footer">
-        <section class="newsletter">
-            <h3 class="newsletter-title">Подпишитесь на рассылку</h3>
-            <p class="newsletter-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
-            <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
-                <input class="field" type="email" name="email" placeholder="Ваш e-mail">
-                <button class="newsletter-form-btn" type="submit">Подписаться</button>
-            </form>
-        </section>
-        <section class="footer-social">
-            <h3 class="visually-hidden">Наши социальные сети</h3>
-            <ul class="footer-social-list">
-              <li class="footer-social-item">
-                <a class="button" href="#">
-                  <span class="visually-hidden">ВКонтакте</span>
-                </a>
-              </li>
-              <li class="footer-social-item">
-                <a class="button" href="#">
-                  <span class="visually-hidden">Телеграм</span>
-                </a>
-              </li>
-              <li class="footer-social-item">
-                <a class="button" href="#">
-                  <span class="visually-hidden">Ютуб</span>
-                </a>
-              </li>
-            </ul>
-            <address class="footer-contacts-address">
-                <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-            </address>
-            <img class="logo-html" src="#" alt="Логотип htmlacademy">
-        </section>
+      <section class="newsletter">
+        <h3 class="newsletter-title">Подпишитесь на рассылку</h3>
+        <p class="newsletter-description">
+          Только полезная информация и никакого спама, честное бойскаутское!
+        </p>
+        <form
+          class="newsletter-form"
+          action="https://echo.htmlacademy.ru/"
+          method="post"
+        >
+          <input
+            class="field"
+            type="email"
+            name="email"
+            placeholder="Ваш e-mail"
+          />
+          <button class="newsletter-form-btn" type="submit">Подписаться</button>
+        </form>
+      </section>
+      <section class="footer-social">
+        <h3 class="visually-hidden">Наши социальные сети</h3>
+        <ul class="footer-social-list">
+          <li class="footer-social-item">
+            <a class="button" href="#">
+              <span class="visually-hidden">ВКонтакте</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="button" href="#">
+              <span class="visually-hidden">Телеграм</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="button" href="#">
+              <span class="visually-hidden">Ютуб</span>
+            </a>
+          </li>
+        </ul>
+        <address class="footer-contacts-address">
+          <a class="footer-contacts-address-phone" href="tel:+78128121212"
+            >+7 (812) 812-12-12</a
+          >
+        </address>
+        <img class="logo-html" src="#" alt="Логотип htmlacademy" />
+      </section>
     </footer>
   </body>
 </html>
