--- a/code/catalog.html
+++ b/code/catalog.html
@@ -242,8 +242,8 @@
         <li class="pagination-item">
           <a class="pagination-link" href="#">4</a>
         </li>
-        <span class="pagination-item">...</span>
-        <li class="pagination-item">
+        <li><span class="pagination-item">...</span>
+          <li class="pagination-item"></li>
           <a class="pagination-link" href="#">10</a>
         </li>
       </ul>
