--- a/code/catalog.html
+++ b/code/catalog.html
@@ -7,14 +7,10 @@
   </head>
   <body>
     <header class="main-header">
+      <a class="navigation-logo">
+        <img class="main-header-logo" alt="Логотип Седоны" src="/index.html" />
+      </a>
       <nav class="navigation">
-        <a class="navigation-logo">
-          <img
-            class="main-header-logo"
-            alt="Логотип Седоны"
-            src="/index.html"
-          />
-        </a>
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link" href="/index.html">Главная</a>
@@ -26,23 +22,23 @@
             <a class="navigation-link" href="#">Гостиницы</a>
           </li>
         </ul>
-        <ul class="navigation-list navigation-user">
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">
-              <span class="visually-hidden">Поиск</span>
-            </a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">
-              <span class="visually-hidden">Избранное</span>
-              <span class="favorites-count">12</span>
-            </a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">ХОЧУ СЮДА! </a>
-          </li>
-        </ul>
       </nav>
+      <ul class="navigation-list navigation-user">
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">
+            <span class="visually-hidden">Поиск</span>
+          </a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">
+            <span class="visually-hidden">Избранное</span>
+            <span class="favorites-count">12</span>
+          </a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">ХОЧУ СЮДА! </a>
+        </li>
+      </ul>
     </header>
     <main class="main-inner">
       <header class="inner-header">
