--- a/code/index.html
+++ b/code/index.html
@@ -7,9 +7,7 @@
   </head>
   <body>
     <header class="main-header">
-      <a class="navigation-logo">
-        <img class="main-header-logo" alt="Логотип Седоны" src="#" />
-      </a>
+      <img class="main-header-logo" alt="Логотип Седоны" src="#" />
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item current-item">
@@ -118,17 +116,17 @@
             </p>
           </li>
         </ul>
+        <div class="hotel-search">
+          <h2 class="hotel-search-title">Заинтересовались?</h2>
+          <p class="hotel-search-description">
+            Укажите предполагаемые даты поездки, и мы покажем вам лучшие
+            предложения гостиниц в Седоне
+          </p>
+          <button class="hotel-search-btn" type="button">
+            ПОИСК ГОСТИНИЦЫ В СЕДОНЕ
+          </button>
+        </div>
       </section>
-      <div class="hotel-search">
-        <h2 class="hotel-search-title">Заинтересовались?</h2>
-        <p class="hotel-search-description">
-          Укажите предполагаемые даты поездки, и мы покажем вам лучшие
-          предложения гостиниц в Седоне
-        </p>
-        <button class="hotel-search-btn" type="button">
-          ПОИСК ГОСТИНИЦЫ В СЕДОНЕ
-        </button>
-      </div>
     </main>
     <footer class="main-footer">
       <section class="newsletter">
@@ -141,12 +139,14 @@
           action="https://echo.htmlacademy.ru/"
           method="post"
         >
-          <input
-            class="field"
-            type="email"
-            name="email"
-            placeholder="Ваш e-mail"
-          />
+          <label>
+            <input
+              class="field"
+              type="email"
+              name="email"
+              placeholder="Ваш e-mail"
+            />
+          </label>
           <button class="newsletter-form-btn" type="submit">Подписаться</button>
         </form>
       </section>
@@ -170,9 +170,9 @@
           </li>
         </ul>
         <address class="footer-contacts-address">
-          <a class="footer-contacts-address-phone" href="tel:+78128121212"
-            >+7 (812) 812-12-12</a
-          >
+          <a class="footer-contacts-address-phone" href="tel:+78128121212">
+            +7 (812) 812-12-12
+          </a>
         </address>
         <img class="logo-html" src="#" alt="Логотип htmlacademy" />
       </section>
