--- a/code/catalog.html
+++ b/code/catalog.html
@@ -39,224 +39,237 @@
       </ul>
     </header>
     <main class="main-inner">
-      <header class="inner-header">
-        <h1 class="inner-header-title">Гостиницы Седоны</h1>
-        <nav class="breadcrumbs-nav">
-          <ul class="breadcrumbs">
-            <li class="breadcrumbs-item">
-              <a class="breadcrumbs-link" href="index.html">
-                <img class="breadcrumbs-main" src="#" alt="Главная" />
+      <section class="hotels">
+        <h1 class="visually-hidden">Каталог</h1>
+        <section class="hotels-filter">
+          <div class="container">
+            <h2 class="hotels-filter-title">Гостиницы Седоны</h2>
+            <nav class="breadcrumbs-nav">
+              <ul class="breadcrumbs">
+                <li class="breadcrumbs-item">
+                  <a class="breadcrumbs-link" href="index.html">
+                    <img class="breadcrumbs-main" src="#" alt="Главная" />
+                  </a>
+                </li>
+                <li class="breadcrumbs-item">
+                  <a class="breadcrumbs-link">Гостиницы</a>
+                </li>
+              </ul>
+            </nav>
+            <section class="catalog-filter">
+              <form
+                class="catalog-filter-form"
+                action="https://echo.htmlacademy.ru/"
+                method="get"
+              >
+                <h2 class="visually-hidden">Инфраструктура</h2>
+                <fieldset class="catalog-filter-group">
+                  <legend class="catalog-filter-title">Инфраструктура:</legend>
+                  <ul class="catalog-filter-list">
+                    <li class="catalog-filter-item">
+                      <label class="control">
+                        <input
+                          class="control-input"
+                          type="checkbox"
+                          name="pool"
+                          checked
+                        />
+                        Бассейн
+                      </label>
+                    </li>
+                    <li class="catalog-filter-item">
+                      <label class="control">
+                        <input
+                          class="control-input"
+                          type="checkbox"
+                          name="parking"
+                          checked
+                        />
+                        Парковка
+                      </label>
+                    </li>
+                    <li class="catalog-filter-item">
+                      <label class="control">
+                        <input
+                          class="control-input"
+                          type="checkbox"
+                          name="wi-fi"
+                        />
+                        Wi-Fi
+                      </label>
+                    </li>
+                  </ul>
+                </fieldset>
+                <h2 class="visually-hidden">Тип жилья</h2>
+                <fieldset class="catalog-filter-group">
+                  <legend class="catalog-filter-title">Тип жилья:</legend>
+                  <ul class="catalog-filter-list">
+                    <li class="catalog-filter-item">
+                      <label class="control">
+                        <input
+                          class="control-input"
+                          type="radio"
+                          name="product-group"
+                          value="hotel"
+                          checked
+                        />
+                        Гостиница
+                      </label>
+                    </li>
+                    <li class="catalog-filter-item">
+                      <label class="control">
+                        <input
+                          class="control-input"
+                          type="radio"
+                          name="product-group"
+                          value="motel"
+                        />
+                        Мотель
+                      </label>
+                    </li>
+                    <li class="catalog-filter-item">
+                      <label class="control">
+                        <input
+                          class="control-input"
+                          type="radio"
+                          name="product-group"
+                          value="apartments"
+                        />
+                        Апартаменты
+                      </label>
+                    </li>
+                  </ul>
+                </fieldset>
+                <h2 class="visually-hidden">Стоимость</h2>
+                <fieldset class="catalog-filter-group">
+                  <legend class="catalog-filter-title">Стоимость, ₽:</legend>
+                  <ul class="catalog-filter-list">
+                    <li class="catalog-filter-item">
+                      <label class="control">
+                        <input
+                          class="control-input"
+                          type="text"
+                          name="min-cost"
+                          placeholder="от"
+                          value="0"
+                        />
+                      </label>
+                    </li>
+                    <li class="catalog-filter-item">
+                      <label class="control">
+                        <input
+                          class="control-input"
+                          type="text"
+                          name="max-cost"
+                          placeholder="до"
+                          value="9000"
+                        />
+                      </label>
+                    </li>
+                  </ul>
+                </fieldset>
+                <button class="submit-button" type="submit">Применить</button>
+                <button class="reset-button" type="reset">Сбросить</button>
+              </form>
+            </section>
+          </div>
+        </section>
+        <div class="hotel-sorting">
+          <span class="counts-hotel">Найдено гостиниц: 38</span>
+          <select class="select-control" aria-label="Сортировка">
+            <option value="cheap">Сначала дешёвые</option>
+            <option value="expensive">Сначала дорогие</option>
+            <option value="popular">Сначала популярные</option>
+          </select>
+          <div>
+            <a href="#" class="btn" aria-label="Показать в виде карточек"></a>
+            <a
+              href="#"
+              class="btn"
+              aria-label="Показать в рассширенном виде"
+            ></a>
+            <a href="#" class="btn" aria-label="Показать в виде списка"></a>
+          </div>
+        </div>
+        <section class="result">
+          <ul class="hotel-list">
+            <li class="hotel-card">
+              <a class="hotel-card-link" href="#">
+                <img class="hotel-card-image" src="#" alt="Отель" />
+                <h3 class="hotel-card-title">Amara Resort & Spa</h3>
               </a>
+              <span class="hotel-card-type">Гостиница</span>
+              <span class="hotel-card-price">От 4000 ₽</span>
+              <a class="hotel-card-button button" href="#">подробнее</a>
+              <button class="hotel-card-add button" type="button">
+                в избранное
+              </button>
+              <span class="hotel-rating">Рейтинг: 8,5</span>
             </li>
-            <li class="breadcrumbs-item">
-              <a class="breadcrumbs-link">Гостиницы</a>
+            <li class="hotel-card">
+              <a class="hotel-card-link" href="#">
+                <img class="hotel-card-image" src="#" alt="Отель" />
+                <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
+              </a>
+              <span class="hotel-card-type">Гостиница</span>
+              <span class="hotel-card-price">От 5000 ₽</span>
+              <a class="hotel-card-button button" href="#">подробнее</a>
+              <button class="hotel-card-add button" type="button">
+                в избранном
+              </button>
+              <span class="hotel-rating">Рейтинг: 9,2</span>
+            </li>
+            <li class="hotel-card">
+              <a class="hotel-card-link" href="#">
+                <img class="hotel-card-image" src="#" alt="Отель" />
+                <h3 class="hotel-card-title">Desert Quail Inn</h3>
+              </a>
+              <span class="hotel-card-type">Гостиница</span>
+              <span class="hotel-card-price">От 2500 ₽</span>
+              <a class="hotel-card-button button" href="#">подробнее</a>
+              <button class="hotel-card-add button" type="button">
+                в избранное
+              </button>
+              <span class="hotel-rating">Рейтинг: 6,9</span>
+            </li>
+            <li class="hotel-card">
+              <a class="hotel-card-link" href="#">
+                <img class="hotel-card-image" src="#" alt="Отель" />
+                <h3 class="hotel-card-title">GreenTree Inn</h3>
+              </a>
+              <span class="hotel-card-type">Гостиница</span>
+              <span class="hotel-card-price">От 1500 ₽</span>
+              <a class="hotel-card-button button" href="#">подробнее</a>
+              <button class="hotel-card-add button" type="button">
+                в избранное
+              </button>
+              <span class="hotel-rating">Рейтинг: 5,0</span>
             </li>
           </ul>
-        </nav>
-        <section class="catalog-filter">
-          <form
-            class="catalog-filter-form"
-            action="https://echo.htmlacademy.ru/"
-            method="get"
-          >
-            <h2 class="visually-hidden">Инфраструктура</h2>
-            <fieldset class="catalog-filter-group">
-              <legend class="catalog-filter-title">Инфраструктура:</legend>
-              <ul class="catalog-filter-list">
-                <li class="catalog-filter-item">
-                  <label class="control">
-                    <input
-                      class="control-input"
-                      type="checkbox"
-                      name="pool"
-                      checked
-                    />
-                    Бассейн
-                  </label>
-                </li>
-                <li class="catalog-filter-item">
-                  <label class="control">
-                    <input
-                      class="control-input"
-                      type="checkbox"
-                      name="parking"
-                      checked
-                    />
-                    Парковка
-                  </label>
-                </li>
-                <li class="catalog-filter-item">
-                  <label class="control">
-                    <input class="control-input" type="checkbox" name="wi-fi" />
-                    Wi-Fi
-                  </label>
-                </li>
-              </ul>
-            </fieldset>
-            <h2 class="visually-hidden">Тип жилья</h2>
-            <fieldset class="catalog-filter-group">
-              <legend class="catalog-filter-title">Тип жилья:</legend>
-              <ul class="catalog-filter-list">
-                <li class="catalog-filter-item">
-                  <label class="control">
-                    <input
-                      class="control-input"
-                      type="radio"
-                      name="product-group"
-                      value="hotel"
-                      checked
-                    />
-                    Гостиница
-                  </label>
-                </li>
-                <li class="catalog-filter-item">
-                  <label class="control">
-                    <input
-                      class="control-input"
-                      type="radio"
-                      name="product-group"
-                      value="motel"
-                    />
-                    Мотель
-                  </label>
-                </li>
-                <li class="catalog-filter-item">
-                  <label class="control">
-                    <input
-                      class="control-input"
-                      type="radio"
-                      name="product-group"
-                      value="apartments"
-                    />
-                    Апартаменты
-                  </label>
-                </li>
-              </ul>
-            </fieldset>
-            <h2 class="visually-hidden">Стоимость</h2>
-            <fieldset class="catalog-filter-group">
-              <legend class="catalog-filter-title">Стоимость, ₽:</legend>
-              <ul class="catalog-filter-list">
-                <li class="catalog-filter-item">
-                  <label class="control">
-                    <input
-                      class="control-input"
-                      type="text"
-                      name="min-cost"
-                      placeholder="от"
-                      value="0"
-                    />
-                  </label>
-                </li>
-                <li class="catalog-filter-item">
-                  <label class="control">
-                    <input
-                      class="control-input"
-                      type="text"
-                      name="max-cost"
-                      placeholder="до"
-                      value="9000"
-                    />
-                  </label>
-                </li>
-              </ul>
-            </fieldset>
-            <button class="submit-button" type="submit">Применить</button>
-            <button class="reset-button" type="submit">Сбросить</button>
-          </form>
         </section>
-      </header>
-      <div class="hotel-sorting">
-        <span class="counts-hotel">Найдено гостиниц: 38</span>
-        <select class="select-control" aria-label="Сортировка">
-          <option value="cheap">Сначала дешёвые</option>
-          <option value="expensive">Сначала дорогие</option>
-          <option value="popular">Сначала популярные</option>
-        </select>
-        <div>
-          <a href="#" class="btn" aria-label="Показать в виде карточек"></a>
-          <a href="#" class="btn" aria-label="Показать в рассширенном виде"></a>
-          <a href="#" class="btn" aria-label="Показать в виде списка"></a>
+        <div class="pagination">
+          <ul class="pagination">
+            <li class="pagination-item">
+              <a class="pagination-link pagination-current">1</a>
+            </li>
+            <li class="pagination-item">
+              <a class="pagination-link" href="#">2</a>
+            </li>
+            <li class="pagination-item">
+              <a class="pagination-link" href="#">3</a>
+            </li>
+            <li class="pagination-item">
+              <a class="pagination-link" href="#">4</a>
+            </li>
+            <li>
+              <span class="pagination-item">...</span>
+            </li>
+            <li class="pagination-item">
+              <a class="pagination-link" href="#">10</a>
+            </li>
+          </ul>
         </div>
-      </div>
-      <section class="result">
-        <ul class="hotel-list">
-          <li class="hotel-card">
-            <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="#" alt="Отель" />
-              <h3 class="hotel-card-title">Amara Resort & Spa</h3>
-            </a>
-            <span class="hotel-card-type">Гостиница</span>
-            <span class="hotel-card-price">От 4000 ₽</span>
-            <a class="hotel-card-button button" href="#">подробнее</a>
-            <button class="hotel-card-add button" type="button">
-              в избранное
-            </button>
-            <span class="hotel-rating">Рейтинг: 8,5</span>
-          </li>
-          <li class="hotel-card">
-            <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="#" alt="Отель" />
-              <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
-            </a>
-            <span class="hotel-card-type">Гостиница</span>
-            <span class="hotel-card-price">От 5000 ₽</span>
-            <a class="hotel-card-button button" href="#">подробнее</a>
-            <button class="hotel-card-add button" type="button">
-              в избранном
-            </button>
-            <span class="hotel-rating">Рейтинг: 9,2</span>
-          </li>
-          <li class="hotel-card">
-            <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="#" alt="Отель" />
-              <h3 class="hotel-card-title">Desert Quail Inn</h3>
-            </a>
-            <span class="hotel-card-type">Гостиница</span>
-            <span class="hotel-card-price">От 2500 ₽</span>
-            <a class="hotel-card-button button" href="#">подробнее</a>
-            <button class="hotel-card-add button" type="button">
-              в избранное
-            </button>
-            <span class="hotel-rating">Рейтинг: 6,9</span>
-          </li>
-          <li class="hotel-card">
-            <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="#" alt="Отель" />
-              <h3 class="hotel-card-title">GreenTree Inn</h3>
-            </a>
-            <span class="hotel-card-type">Гостиница</span>
-            <span class="hotel-card-price">От 1500 ₽</span>
-            <a class="hotel-card-button button" href="#">подробнее</a>
-            <button class="hotel-card-add button" type="button">
-              в избранное
-            </button>
-            <span class="hotel-rating">Рейтинг: 5,0</span>
-          </li>
-        </ul>
       </section>
-      <ul class="pagination">
-        <li class="pagination-item">
-          <a class="pagination-link pagination-current">1</a>
-        </li>
-        <li class="pagination-item">
-          <a class="pagination-link" href="#">2</a>
-        </li>
-        <li class="pagination-item">
-          <a class="pagination-link" href="#">3</a>
-        </li>
-        <li class="pagination-item">
-          <a class="pagination-link" href="#">4</a>
-        </li>
-        <li>
-          <span class="pagination-item">...</span>
-        </li>
-        <li class="pagination-item">
-          <a class="pagination-link" href="#">10</a>
-        </li>
-      </ul>
-    </main>
-    <footer class="main-footer">
       <section class="newsletter">
         <h3 class="newsletter-title">Подпишитесь на рассылку</h3>
         <p class="newsletter-description">
@@ -276,8 +289,9 @@
           <button class="newsletter-form-btn" type="submit">Подписаться</button>
         </form>
       </section>
-      <section class="footer-social">
-        <h3 class="visually-hidden">Наши социальные сети</h3>
+    </main>
+    <footer class="main-footer">
+      <div class="footer-social">
         <ul class="footer-social-list">
           <li class="footer-social-item">
             <a class="button" href="#">
@@ -301,7 +315,7 @@
           >
         </address>
         <img class="logo-html" src="#" alt="Логотип htmlacademy" />
-      </section>
+      </div>
     </footer>
   </body>
 </html>
