--- a/code/index.html
+++ b/code/index.html
@@ -34,60 +34,68 @@
           </a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link" href="#">ХОЧУ СЮДА! </a>
+          <a class="navigation-link" href="#">ХОЧУ СЮДА!</a>
         </li>
       </ul>
     </header>
     <main>
-      <img
-        class="welcome-img"
-        src="#"
-        alt="Добро пожаловать в великолепную Седону"
-      />
-      <h1 class="sedona-info">
-        Седона — небольшой городок в Аризоне, заслуживающий большего!
-      </h1>
-      <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-      <section class="advantages">
-        <h2 class="visually-hidden">Плюсы Седоны</h2>
-        <ul class="advantages-list">
-          <li class="advantages-item">
-            <h3 class="advantages-title">Настоящий городок</h3>
-            <p class="advantages-description">
-              Седона — не аттракцион для туристов, там течёт своя жизнь
-            </p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Небольшая площадь</h3>
-            <p class="advantages-description">
-              Все достопримечательности находятся очень близко
-            </p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Красивая дорога</h3>
-            <p class="advantages-description">
-              Ехать в Седону из Лас-Вегаса совсем не скучно!
-            </p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Мало туристов</h3>
-            <p class="advantages-description">
-              Большинство едет в Гранд Каньон и толпится там
-            </p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Там есть мост дьявола</h3>
-            <p class="advantages-description">
-              Да, по нему можно пройти! Если вы осмелитесь, разумеется
-            </p>
-          </li>
-        </ul>
-        <img class="advantages-img-city" src="#" alt="Город Седона" />
+      <div class="container">
         <img
-          class="advantages-img-bridge"
+          class="welcome-img"
           src="#"
-          alt="Мост дьявола в Седоне"
+          alt="Добро пожаловать в великолепную Седону"
         />
+      </div>
+      <section class="advantages">
+        <h1 class="sedona-info">
+          Седона — небольшой городок в Аризоне, заслуживающий большего!
+        </h1>
+        <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+        <h2 class="visually-hidden">Плюсы Седоны</h2>
+        <div class="container">
+          <ul class="advantages-list">
+            <li class="advantages-item">
+              <h3 class="advantages-title">Настоящий городок</h3>
+              <p class="advantages-description">
+                Седона — не аттракцион для туристов, там течёт своя жизнь
+              </p>
+            </li>
+            <li class="advantages-item">
+              <img class="advantages-img-city" src="#" alt="Город Седона" />
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-title">Небольшая площадь</h3>
+              <p class="advantages-description">
+                Все достопримечательности находятся очень близко
+              </p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-title">Красивая дорога</h3>
+              <p class="advantages-description">
+                Ехать в Седону из Лас-Вегаса совсем не скучно!
+              </p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-title">Мало туристов</h3>
+              <p class="advantages-description">
+                Большинство едет в Гранд Каньон и толпится там
+              </p>
+            </li>
+            <li class="advantages-item">
+              <img
+                class="advantages-img-bridge"
+                src="#"
+                alt="Мост дьявола в Седоне"
+              />
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-title">Там есть мост дьявола</h3>
+              <p class="advantages-description">
+                Да, по нему можно пройти! Если вы осмелитесь, разумеется
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="services">
         <h2 class="services-title">
@@ -122,36 +130,37 @@
             Укажите предполагаемые даты поездки, и мы покажем вам лучшие
             предложения гостиниц в Седоне
           </p>
-          <button class="hotel-search-btn" type="button">
-            ПОИСК ГОСТИНИЦЫ В СЕДОНЕ
-          </button>
+          <a class="hotel-search-btn" href="#"> ПОИСК ГОСТИНИЦЫ В СЕДОНЕ </a>
+        </div>
+      </section>
+      <section class="newsletter">
+        <div class="container">
+          <h3 class="newsletter-title">Подпишитесь на рассылку</h3>
+          <p class="newsletter-description">
+            Только полезная информация и никакого спама, честное бойскаутское!
+          </p>
+          <form
+            class="newsletter-form"
+            action="https://echo.htmlacademy.ru/"
+            method="post"
+          >
+            <label>
+              <input
+                class="field"
+                type="email"
+                name="email"
+                placeholder="Ваш e-mail"
+              />
+            </label>
+            <button class="newsletter-form-btn" type="submit">
+              Подписаться
+            </button>
+          </form>
         </div>
       </section>
     </main>
     <footer class="main-footer">
-      <section class="newsletter">
-        <h3 class="newsletter-title">Подпишитесь на рассылку</h3>
-        <p class="newsletter-description">
-          Только полезная информация и никакого спама, честное бойскаутское!
-        </p>
-        <form
-          class="newsletter-form"
-          action="https://echo.htmlacademy.ru/"
-          method="post"
-        >
-          <label>
-            <input
-              class="field"
-              type="email"
-              name="email"
-              placeholder="Ваш e-mail"
-            />
-          </label>
-          <button class="newsletter-form-btn" type="submit">Подписаться</button>
-        </form>
-      </section>
-      <section class="footer-social">
-        <h3 class="visually-hidden">Наши социальные сети</h3>
+      <div class="footer-social">
         <ul class="footer-social-list">
           <li class="footer-social-item">
             <a class="button" href="#">
@@ -174,8 +183,10 @@
             +7 (812) 812-12-12
           </a>
         </address>
-        <img class="logo-html" src="#" alt="Логотип htmlacademy" />
-      </section>
+        <a class="htmlacademy" href="https://htmlacademy.ru/study">
+          <img class="logo-html" src="#" alt="Логотип htmlacademy" />
+        </a>
+      </div>
     </footer>
   </body>
 </html>
