--- a/catalog.html
+++ b/catalog.html
@@ -224,6 +224,8 @@
                     class="hotel-card-image"
                     src="images/hotel-1.jpg"
                     alt="Отель"
+                    width="300"
+                    height="212"
                   />
                   <h3 class="hotel-card-title">Amara Resort & Spa</h3>
                 </a>
@@ -241,6 +243,8 @@
                     class="hotel-card-image"
                     src="images/hotel-2.jpg"
                     alt="Отель"
+                    width="300"
+                    height="212"
                   />
                   <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
                 </a>
@@ -258,6 +262,8 @@
                     class="hotel-card-image"
                     src="images/hotel-3.jpg"
                     alt="Отель"
+                    width="300"
+                    height="212"
                   />
                   <h3 class="hotel-card-title">Desert Quail Inn</h3>
                 </a>
@@ -275,6 +281,8 @@
                     class="hotel-card-image"
                     src="images/hotel-4.jpg"
                     alt="Отель"
+                    width="300"
+                    height="212"
                   />
                   <h3 class="hotel-card-title">GreenTree Inn</h3>
                 </a>
