добавил базовую стилизацию всех страниц

--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Гостиницы</title>
+    <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
     <header class="main-header">
@@ -43,14 +44,14 @@
         </li>
       </ul>
       <div class="navigation-item">
-        <a class="navigation-link" href="#">ХОЧУ СЮДА!</a>
+        <a class="navigation-link-btn" href="#">ХОЧУ СЮДА!</a>
       </div>
     </header>
     <main class="main-inner">
       <section class="hotels">
         <div class="hotels-wrapper container">
           <h1 class="visually-hidden">Каталог</h1>
-          <section class="hotels-filter">
+          <section class="hotels-filter hotels-filter-wrapper">
             <h2 class="hotels-filter-title">Гостиницы Седоны</h2>
             <nav class="breadcrumbs-nav">
               <ul class="breadcrumbs">
