--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Главная</title>
+    <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
     <header class="main-header">
@@ -34,14 +35,14 @@
           </a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link" href="#">
+          <a class="navigation-link-favorite" href="#">
             <span class="visually-hidden">Избранное</span>
             <span class="favorites-count">12</span>
           </a>
         </li>
       </ul>
       <div class="navigation-item">
-        <a class="navigation-link" href="#">ХОЧУ СЮДА!</a>
+        <a class="navigation-link-btn" href="#">ХОЧУ СЮДА!</a>
       </div>
     </header>
     <main>
@@ -63,15 +64,17 @@
           <h2 class="sedona-info">
             Седона — небольшой городок в Аризоне, заслуживающий большего!
           </h2>
-          <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+          <p class="sedona-info-subtitle">
+            Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
+          </p>
           <ul class="advantages-list">
-            <li class="advantages-item">
+            <li class="advantages-item sedona-city">
               <h3 class="advantages-title">Настоящий городок</h3>
               <p class="advantages-description">
                 Седона — не аттракцион для туристов, там течёт своя жизнь
               </p>
             </li>
-            <li class="advantages-item">
+            <li class="advantages-item city-img">
               <img
                 class="advantages-img-city"
                 src="images/photo-1.jpg"
@@ -80,25 +83,25 @@
                 height="385"
               />
             </li>
-            <li class="advantages-item">
+            <li class="advantages-item small-town">
               <h3 class="advantages-title">Небольшая площадь</h3>
               <p class="advantages-description">
                 Все достопримечательности находятся очень близко
               </p>
             </li>
-            <li class="advantages-item">
+            <li class="advantages-item scenic-road">
               <h3 class="advantages-title">Красивая дорога</h3>
               <p class="advantages-description">
                 Ехать в Седону из Лас-Вегаса совсем не скучно!
               </p>
             </li>
-            <li class="advantages-item">
+            <li class="advantages-item few-tourists">
               <h3 class="advantages-title">Мало туристов</h3>
               <p class="advantages-description">
                 Большинство едет в Гранд Каньон и толпится там
               </p>
             </li>
-            <li class="advantages-item">
+            <li class="advantages-item bridge-img">
               <img
                 class="advantages-img-bridge"
                 src="images/photo-2.jpg"
@@ -107,7 +110,7 @@
                 height="385"
               />
             </li>
-            <li class="advantages-item">
+            <li class="advantages-item devils-bridge">
               <h3 class="advantages-title">Там есть мост дьявола</h3>
               <p class="advantages-description">
                 Да, по нему можно пройти! Если вы осмелитесь, разумеется
