--- a/catalog.html
+++ b/catalog.html
@@ -75,8 +75,8 @@
       </div>
     </header>
     <main class="main-container">
-      <h1 class="visually-hidden">Каталог</h1>
       <section class="hotels">
+        <h1 class="visually-hidden">Каталог</h1>
         <div class="hotels-wrapper container">
           <section class="hotels-filter hotels-filter-wrapper">
             <h2 class="hotels-filter-title">Гостиницы Седоны</h2>
@@ -721,7 +721,7 @@
 
     <div class="modal-container">
       <div class="modal modal-reservation">
-        <button class="modal-close-button">
+        <button class="modal-close-button" type="button">
           <span class="visually-hidden">Закрыть</span>
           <svg
             class="modal-close-icon"
@@ -784,7 +784,7 @@
               <div class="adults-number people-numb-wrapper">
                 <span class="people">Взрослые:</span>
                 <div class="modal-btn-wrapper">
-                  <button class="modal-btn-count modal-btn-minus">
+                  <button class="modal-btn-count modal-btn-minus" type="button">
                     <svg
                       class="btn-minus-icon"
                       width="20"
@@ -801,7 +801,7 @@
                     </svg>
                   </button>
                   <span>2</span>
-                  <button class="modal-btn-count modal-btn-plus">
+                  <button class="modal-btn-count modal-btn-plus" type="button">
                     <svg
                       class="btn-plus-icon"
                       width="20"
@@ -822,7 +822,7 @@
 
               <div class="children-number people-numb-wrapper">
                 <div class="people-container">
-                  <span class="people children">Дети:</span>
+                  <span class="people">Дети:</span>
                   <svg
                     class="icon-info"
                     width="26"
@@ -858,7 +858,7 @@
                 </div>
 
                 <div class="modal-btn-wrapper">
-                  <button class="modal-btn-count modal-btn-minus">
+                  <button class="modal-btn-count modal-btn-minus" type="button">
                     <svg
                       class="btn-minus-icon"
                       width="20"
@@ -875,7 +875,7 @@
                     </svg>
                   </button>
                   <span>2</span>
-                  <button class="modal-btn-count modal-btn-plus">
+                  <button class="modal-btn-count modal-btn-plus" type="button">
                     <svg
                       class="btn-plus-icon"
                       width="20"
@@ -895,12 +895,12 @@
               </div>
             </div>
             <div class="submit-btn-wrapper">
-              <button class="modal-submit-btn">Найти</button>
+              <button class="modal-submit-btn" type="submit">Найти</button>
             </div>
           </form>
         </section>
       </div>
     </div>
-    <script src="/index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
