--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 
     <div class="modal-container">
       <div class="modal modal-reservation">
-        <button class="modal-close-button">
+        <button class="modal-close-button" type="button">
           <span class="visually-hidden">Закрыть</span>
           <svg
             class="modal-close-icon"
@@ -440,7 +440,7 @@
               <div class="adults-number people-numb-wrapper">
                 <span class="people">Взрослые:</span>
                 <div class="modal-btn-wrapper">
-                  <button class="modal-btn-count modal-btn-minus">
+                  <button class="modal-btn-count modal-btn-minus" type="button">
                     <svg
                       class="btn-minus-icon"
                       width="20"
@@ -457,7 +457,7 @@
                     </svg>
                   </button>
                   <span>2</span>
-                  <button class="modal-btn-count modal-btn-plus">
+                  <button class="modal-btn-count modal-btn-plus" type="button">
                     <svg
                       class="btn-plus-icon"
                       width="20"
@@ -514,7 +514,7 @@
                 </div>
 
                 <div class="modal-btn-wrapper">
-                  <button class="modal-btn-count modal-btn-minus">
+                  <button class="modal-btn-count modal-btn-minus" type="button">
                     <svg
                       class="btn-minus-icon"
                       width="20"
@@ -531,7 +531,7 @@
                     </svg>
                   </button>
                   <span>2</span>
-                  <button class="modal-btn-count modal-btn-plus">
+                  <button class="modal-btn-count modal-btn-plus" type="button">
                     <svg
                       class="btn-plus-icon"
                       width="20"
@@ -551,12 +551,12 @@
               </div>
             </div>
             <div class="submit-btn-wrapper">
-              <button class="modal-submit-btn">Найти</button>
+              <button class="modal-submit-btn" type="submit">Найти</button>
             </div>
           </form>
         </section>
       </div>
     </div>
-    <script src="/index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
