очень небольшие правки

--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@
               Укажите предполагаемые даты поездки,<br />
               и мы покажем вам лучшие предложения гостиниц в Седоне
             </p>
-            <button class="navigation-link-btn hotel-search-btn" type="button">
+            <a class="hotel-search-btn" href="catalog.html">
               ПОИСК ГОСТИНИЦЫ В СЕДОНЕ
-            </button>
+            </a>
           </div>
         </div>
       </section>
@@ -575,6 +575,6 @@
         </section>
       </div>
     </div>
-    <script src="../2493395-sedona-1/index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
