--- a/catalog.html
+++ b/catalog.html
@@ -119,7 +119,7 @@
                   <ul class="catalog-filter-list">
                     <li class="catalog-filter-item">
                       <input
-                        class="control-input visually-hidden"
+                        class="custom-input visually-hidden"
                         type="checkbox"
                         name="pool"
                         checked
@@ -131,7 +131,7 @@
                     </li>
                     <li class="catalog-filter-item">
                       <input
-                        class="control-input visually-hidden"
+                        class="custom-input visually-hidden"
                         type="checkbox"
                         name="parking"
                         checked
@@ -143,7 +143,7 @@
                     </li>
                     <li class="catalog-filter-item">
                       <input
-                        class="control-input visually-hidden"
+                        class="custom-input visually-hidden"
                         type="checkbox"
                         name="wi-fi"
                         id="wi-fi"
@@ -162,7 +162,7 @@
                   <ul class="catalog-filter-list">
                     <li class="catalog-filter-item">
                       <input
-                        class="control-input visually-hidden"
+                        class="custom-input visually-hidden"
                         type="radio"
                         name="product-group"
                         value="hotel"
@@ -175,7 +175,7 @@
                     </li>
                     <li class="catalog-filter-item">
                       <input
-                        class="control-input visually-hidden"
+                        class="custom-input visually-hidden"
                         type="radio"
                         name="product-group"
                         value="motel"
@@ -187,7 +187,7 @@
                     </li>
                     <li class="catalog-filter-item">
                       <input
-                        class="control-input visually-hidden"
+                        class="custom-input visually-hidden"
                         type="radio"
                         name="product-group"
                         value="apartments"
@@ -918,6 +918,6 @@
         </section>
       </div>
     </div>
-    <script src="../2493395-sedona-1/index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
